# libdatachannel-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  DEPS  MANIFEST.in  Makefile  NOTICE  OBS_WHIP_SIMULCAST.md  README.md  THIRD_PARTY_LICENSES.md  VERSION  buildbase.py  deps.json  pyproject.toml  run.py  setup.py
.github/actions/download/: action.yml
.github/actions/permission/: action.yml
.github/workflows/: build.yml  build_debug.yml  claude.yml  wheel.yml
docs/: 3550_rtp.txt  6716_opus.txt  7587_rtp_opus.txt  H264RtpDepacketizer.md  MediaHandler_improvement_proposal.md  WHIP_WHEP.md  draft-ietf-wish-whep-03.txt  whep-02.txt  whip.txt
examples/: README.md  ayame.py  custom_media_handler.py  misc.py  pyproject.toml  whep.py  whep2.py  whep3.py  whip.py  whip_blend2d.py  whip_simulcast.py  wish.py
issues/: 0001-bug-fix-peer-connection-destructor-gil-release.md  0002-bug-fix-websocket-destructor-gil-release.md  0003-bug-fix-websocketserver-destructor-gil-release.md  0004-bug-fix-ice-udp-mux-listener-destructor-gil-release.md
issues/closed/: 0001-bug-fix-peer-connection-destructor-gil-release.md
issues/pending/: 0005-bug-fix-destructor-callback-deadlock.md
src/: aom_video_decoder.cpp  aom_video_decoder.h  aom_video_encoder.cpp  aom_video_encoder.h  audio_codec.cpp  audio_codec.h  bind_codec.cpp  bind_codecs.cpp  bind_libdatachannel.cpp  bind_libyuv.cpp  bind_video_codec.cpp  libdatachannel_ext.cpp  openh264_video_decoder.cpp  openh264_video_decoder.h  openh264_video_encoder.cpp  openh264_video_encoder.h  opus_audio_decoder.cpp  opus_audio_decoder.h  opus_audio_encoder.cpp  opus_audio_encoder.h  video_codec.cpp  video_codec.h  videotoolbox_video_encoder.cpp  videotoolbox_video_encoder.h
src/libdatachannel/: __init__.py
src/libdatachannel/codec/: __init__.py
src/libdatachannel/libyuv/: __init__.py
test/: test_description.py  test_frameinfo.py  test_mediahandler.py  test_message.py
tests/: conftest.py  test_audio_codec.py  test_candidate.py  test_configuration.py  test_description.py  test_frameinfo.py  test_free_threading.py  test_h265nalunit.py  test_libyuv.py  test_mediahandler.py  test_memory_leak.py  test_message.py  test_nalunit.py  test_packetizationconfig.py  test_peerconnection.py  test_prop_audio_codec.py  test_reliability.py  test_rtp_depacketizer.py  test_rtppacketizer.py  test_video_codec.py  test_websocket.py  test_websocketserver.py
