[project]
name = "libdatachannel-py"
dynamic = ["version"]
description = "libdatachannel-py is a Python binding for libdatachannel."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    # "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
[project.urls]
Source = "https://github.com/shiguredo/libdatachannel-py"
Discord = "https://discord.gg/shiguredo"

[build-system]
requires = [
    "scikit-build-core>=0.9",
    "nanobind>=2.9",
    "numpy",
]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "nanobind==2.9.2",
    "pytest",
    "pytest-aiohttp",
    "numpy",
    "ty",
    "hypothesis",
    "aiohttp",
    "ruff",
]

[tool.uv.workspace]
members = ["examples"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<value>.+)$"
