[project]
name = "libdatachannel-py"
dynamic = ["version"]
description = "libdatachannel-py is a Python binding for libdatachannel."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    # "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"

[project.urls]
Source = "https://github.com/shiguredo/libdatachannel-py"
Discord = "https://discord.gg/shiguredo"

[build-system]
requires = ["setuptools>=80.9", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["nanobind==2.9.2"]
test = ["pytest", "pytest-aiohttp", "numpy", "hypothesis", "aiohttp"]
lint = ["ruff", "ty"]

[tool.uv]
default-groups = ["dev", "test", "lint"]

[tool.uv.workspace]
members = ["examples"]

[tool.ruff]
target-version = "py313"
line-length = 100
