[build-system]
requires = ["scikit-build-core>=0.11", "nanobind>=2.9"]
build-backend = "scikit_build_core.build"

[project]
name = "libdatachannel-py"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
dynamic = ["version"]
description = "libdatachannel-py is a Python binding for libdatachannel."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.13"

[project.urls]
Source = "https://github.com/shiguredo/libdatachannel-py"
Discord = "https://discord.gg/shiguredo"

[dependency-groups]
dev = [{ include-group = "test" }, { include-group = "lint" }]
test = ["pytest", "pytest-aiohttp", "pytest-timeout", "numpy", "hypothesis", "aiohttp"]
lint = ["ruff", "ty"]
pypi = ["auditwheel", "patchelf"]
example = [
    "blend2d-py>=2025.2.0",
    "webcodecs-py>=2025.1.0.dev1",
]

[tool.scikit-build]
minimum-version = "0.11"
sdist.include = ["VERSION", "deps.json"]
build-dir = "_build"

[tool.scikit-build.cmake]
version = ">=4.1"
define = { "CMAKE_CXX_STANDARD" = "20" }

[tool.scikit-build.build]
verbose = false

[tool.scikit-build.wheel]
packages = ["src/libdatachannel"]
expand-macos-universal-tags = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<value>.+)$"

[tool.uv]
package = false
managed = true
python-preference = "only-managed"

[tool.uv.workspace]
members = ["examples"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
