[project]
name = "examples"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libdatachannel-py",
    "httpx",
    "numpy",
    "opencv-python",
    "sounddevice",
]

[tool.uv]
package = false
managed = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
libdatachannel-py = { workspace = true }
