[project]
name = "examples"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libdatachannel-py",
    "blend2d-py>=2025.2.0",
    "webcodecs-py>=2025.1.0.dev1",
    "httpx",
    "numpy",
    "opencv-python",
    "sounddevice",
]

[tool.uv]
package = false
managed = true

[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
libdatachannel-py = { workspace = true }
